# hr_app_backend/api/v1/urls.py
@@ -5,6 +5,7 @@ from .views import health_check, upload_presign_view
 app_name = "v1"
 
 urlpatterns = [
+    path('audit-logs/', include('hr_app_backend.audit_logs.urls')),
     path('attendance/', include('hr_app_backend.attendance.urls')),
     path('auth/', include('hr_app_backend.authentication.urls')),
     path('billing/', include('hr_app_backend.billing.urls')),
